# blocksd

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  VISION.md  install.sh  justfile  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
.hypothesis/constants/: 0962d2c0d9343bca  46aacccf210a9036  5443f77d176e9a50  67c31419a79e2cbf  85ef9538cb5aae5b  89fe68d5f756043f  9babcfe9c2ca98ca  c675d90d29b16243
docs/: API.md  FIRMWARE_NOTES.md  index.md  package.json  pnpm-lock.yaml  troubleshooting.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  silkcircuit.css
docs/architecture/: data-flow.md  index.md  littlefoot.md  modules.md
docs/guide/: configuration.md  index.md  installation.md  quick-start.md  web-dashboard.md
docs/protocol/: index.md  lifecycle.md  messages.md  sysex-framing.md  topology.md
docs/reference/: api.md  cli.md  devices.md
firmware/default/: loopblock.littlefoot  padblock.littlefoot  seaboardblock.littlefoot
packaging/aur/blocksd/: PKGBUILD
packaging/aur/blocksd-git/: PKGBUILD
src/blocksd/: __init__.py  __main__.py  daemon.py  logging.py  sdnotify.py
src/blocksd/api/: __init__.py  events.py  http.py  protocol.py  server.py  websocket.py
src/blocksd/cli/: __init__.py  app.py  config.py  install.py  led.py
src/blocksd/config/: __init__.py  loader.py  schema.py
src/blocksd/device/: __init__.py  config_ids.py  connection.py  models.py  registry.py
src/blocksd/led/: __init__.py  bitmap.py  patterns.py
src/blocksd/littlefoot/: __init__.py  assembler.py  opcodes.py  programs.py
src/blocksd/protocol/: __init__.py  builder.py  checksum.py  constants.py  data_change.py  decoder.py  packing.py  remote_heap.py  serial.py
src/blocksd/topology/: __init__.py  detector.py  device_group.py  manager.py
src/blocksd/web/: __init__.py
systemd/: 99-roli-blocks.rules  blocksd.service
tests/: test_api_events.py  test_api_protocol.py  test_http.py  test_sdnotify.py  test_web_server.py  test_websocket.py
tests/cli/: test_config.py  test_led.py
tests/device/: test_events.py
tests/led/: test_bitmap.py  test_patterns.py
tests/littlefoot/: test_assembler.py  test_programs.py
tests/protocol/: test_builder.py  test_builder_config.py  test_checksum.py  test_data_change.py  test_decoder.py  test_packing.py  test_remote_heap.py  test_serial.py
tests/topology/: test_detector.py  test_device_group.py
web/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx
web/src/components/dashboard/: DashboardView.tsx  DeviceCard.tsx  TopologyMap.tsx
web/src/components/device/: ConfigPanel.tsx  ConfigSlider.tsx  DeviceDetailView.tsx
web/src/components/layout/: AppShell.tsx  DeviceList.tsx  StatusBar.tsx
web/src/hooks/: useBlocksd.tsx  useConfig.ts  useDevices.ts  useTopology.ts
web/src/lib/: constants.ts  frame.ts  protocol.ts  types.ts
web/src/pages/: Dashboard.tsx  DeviceDetail.tsx
web/src/theme/: global.css  tokens.ts
