[project]
name = "blocksd"
version = "0.1.0"
description = "Linux daemon for ROLI Blocks devices — keeps them alive, controls LEDs, manages topology"
readme = "README.md"
license = "ISC"
requires-python = ">=3.13"
authors = [{ name = "hyperb1iss", email = "hyperb1iss@gmail.com" }]
keywords = ["roli", "blocks", "midi", "lightpad", "seaboard", "linux", "daemon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "python-rtmidi>=1.5.8",
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.10",
    "tomli>=2.2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.120",
    "ruff>=0.9",
    "ty>=0.0.1a7",
]

[project.scripts]
blocksd = "blocksd.cli.app:app"

[project.urls]
Homepage = "https://github.com/hyperb1iss/blocksd"
Repository = "https://github.com/hyperb1iss/blocksd"
Issues = "https://github.com/hyperb1iss/blocksd/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blocksd"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["blocksd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.13"
